--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <!-- Banner -->
 	<section id="banner">
-		<h2>Kotlin La Paz</h2>
-		<p>Kotlin is a first-language</p>
+		<h2>Alpha</h2>
+		<p>Another fine responsive site template freebie by HTML5 UP.</p>
 		<ul class="actions">
 			<li><a href="#" class="button special">Sign Up</a></li>
 			<li><a href="#" class="button">Learn More</a></li>
