--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,10 @@
 <!-- Header -->
 	<header id="header" class="alt">
-		<h1><a href="/index.html">Alpha</a> by HTML5 UP</h1>
+		<h1><a href="{{ site.baseurl }}/index.html">Alpha</a> by HTML5 UP</h1>
 		<nav id="nav">
 			<ul>
-				<li><a href="/index.html">Home</a></li>
-				<li><a href="/blog">Blog</a></li>
+				<li><a href="{{ site.baseurl }}/index.html">Home</a></li>
+				<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
 				<li>
 					<a href="" class="icon fa-angle-down">Layouts</a>
 					<ul>
