--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
 <!-- Header -->
 	<header id="header" class="alt">
-		<h1><a href="{{ site.baseurl }}/index.html">Alpha</a> by HTML5 UP</h1>
+		<!--<h1><a href="{{ site.baseurl }}/index.html">Alpha</a> by HTML5 UP</h1>-->
+		<img src="{{ site.baseurl }}/assets/images/Kotlin_Logo_Horizontal.png" height="100px"></img>
 		<nav id="nav">
 			<ul>
 				<li><a href="{{ site.baseurl }}/index.html">Home</a></li>
