Add gallery and more info

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 		<section id="banner">
 			<h2>Kotlin La Paz</h2>
 			<p>El lenguaje de programación número uno para desarrollo de aplicaciones Android.</p>
-			<ul class="actions">
+			<ul class="icons">
 				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
