--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,29 +1,15 @@
 <!-- Header -->
 	<header id="header" class="alt">
 		<!--<h1><a href="{{ site.baseurl }}/index.html">Alpha</a> by HTML5 UP</h1>-->
-		<img src="{{ site.baseurl }}/assets/images/Kotlin_Logo_Horizontal.png" height="40px"></img>
+		<img src="{{ site.baseurl }}/assets/images/Kotlin_Logo_Horizontal.png" height="40px" style="margin-left: 30px;"></img>
 		<nav id="nav">
 			<ul>
-				<li><a href="{{ site.baseurl }}/index.html">Home</a></li>
+				<li><a href="{{ site.baseurl }}/index.html">Inicio</a></li>
 				<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-				<li>
-					<a href="" class="icon fa-angle-down">Layouts</a>
-					<ul>
-						<li><a href="#">Generic</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Elements</a></li>
-						<li>
-							<a href="">Submenu</a>
-							<ul>
-								<li><a href="#">Option One</a></li>
-								<li><a href="#">Option Two</a></li>
-								<li><a href="#">Option Three</a></li>
-								<li><a href="#">Option Four</a></li>
-							</ul>
-						</li>
-					</ul>
-				</li>
-				<li><a href="#" class="button">Sign Up</a></li>
+				<li><a href="{{ site.baseurl }}/blog">Nights</a></li>
+				<li><a href="{{ site.baseurl }}/blog">Conf</a></li>
+				<li><a href="{{ site.baseurl }}/blog">Everywhere</a></li>
+				<li><a href="#" class="button">Código de conducta</a></li>
 			</ul>
 		</nav>
 	</header>
