--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,9 +1,13 @@
 <!-- Banner -->
 	<section id="banner">
-		<h2>Alpha</h2>
-		<p>Another fine responsive site template freebie by HTML5 UP.</p>
-		<ul class="actions">
-			<li><a href="#" class="button special">Sign Up</a></li>
-			<li><a href="#" class="button">Learn More</a></li>
+		<h2>Kotlin La Paz</h2>
+		<p>El lenguaje de programación número uno para desarrollo de aplicaciones Android.</p>
+		<ul class="icons">
+			<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+			<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+			<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+			<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 		</ul>
 	</section>
