--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,9 @@
 					<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					<li> Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
+					<li></li>
+					<li>Develop with love</li>
+					<li></li>
 				</ul>
 			</footer>
 
