--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,10 +6,53 @@
 			<ul>
 				<li><a href="{{ site.baseurl }}/index.html">Inicio</a></li>
 				<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-				<li><a href="{{ site.baseurl }}/blog">Nights</a></li>
-				<li><a href="{{ site.baseurl }}/blog">Conf</a></li>
-				<li><a href="{{ site.baseurl }}/blog">Everywhere</a></li>
-				<li><a href="#" class="button">Código de conducta</a></li>
+				<li>
+					<a href="" class="icon fa-angle-down">Eventos</a>
+					<ul>
+						<li><a href="#">Kotlin/Everywhere 2019</a></li>
+						<li><a href="#">KotlinConf'2020 Global La Paz</a></li>
+						<li><a href="#">Kotlin Nights 2020</a></li>
+						<li>
+							<a href="">Submenu</a>
+							<ul>
+								<li><a href="#">Option One</a></li>
+								<li><a href="#">Option Two</a></li>
+								<li><a href="#">Option Three</a></li>
+								<li><a href="#">Option Four</a></li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li><a href="{{ site.baseurl }}/blog" class="button">Código de conducta</a></li>
 			</ul>
 		</nav>
 	</header>
+
+
+
+	<!--
+		<nav id="nav">
+			<ul>
+				<li><a href="{{ site.baseurl }}/index.html">Home</a></li>
+				<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
+				<li>
+					<a href="" class="icon fa-angle-down">Layouts</a>
+					<ul>
+						<li><a href="#">Generic</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Elements</a></li>
+						<li>
+							<a href="">Submenu</a>
+							<ul>
+								<li><a href="#">Option One</a></li>
+								<li><a href="#">Option Two</a></li>
+								<li><a href="#">Option Three</a></li>
+								<li><a href="#">Option Four</a></li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li><a href="#" class="button">Sign Up</a></li>
+			</ul>
+		</nav>
+	-->
