--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,11 +3,10 @@
 		<h2>Kotlin La Paz</h2>
 		<p>El lenguaje de programación número uno para desarrollo de aplicaciones Android.</p>
 		<ul class="icons">
-			<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-			<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-			<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-			<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-			<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-			<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+			<li><a href="https://twitter.com/KotlinLaPaz" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="https://facebook.com/KotlinLPZ" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+			<li><a href="https://instagram.com/KotlinLaPaz" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="https://github.com/KotlinLaPaz" class="icon fa-github"><span class="label">Github</span></a></li>
+			<li><a href="https://meetup.com/KotlinLPZ" class="icon fa-meetup"><span class="label">Meetup</span></a></li>
 		</ul>
 	</section>
