--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,16 +2,15 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-					<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+					<li><a href="https://twitter.com/KotlinLaPaz" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://facebook.com/KotlinLPZ" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://instagram.com/KotlinLaPaz" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/KotlinLaPaz" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://meetup.com/KotlinLPZ" class="icon fa-meetup"><span class="label">Meetup</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li></li>
-					<li>Develop with love</li>
+					<li>Desarrollado con &hearts;</li>
 					<li></li>
 				</ul>
 			</footer>
